tests/errors/comb-group-in-control.futil
import "primitives/core.futil";
import "primitives/memories/comb.futil";
component main() -> () {
  cells {
    r = std_reg(32);
  }
  wires {
    group a {
      a[done] = 1'd1;
    }
  }
  control {
    a;
  }
}
