tests/errors/comb-group-in-control.expect
---CODE---
1
---STDERR---
Error: tests/errors/comb-group-in-control.futil
7 |    group a {
  |    ^^^^^^^^^ Malformed Structure: Group with constant done condition are invalid. Use `comb group` instead to define a combinational group.
